mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  labels:
    app: wp-app
    type: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wp-app
      type: db
  template:
    metadata:
      name: mysql-pod
      labels:
        app: wp-app
        type: db
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: type
                operator: In
                values:
                - db
      containers:
      - name: mysql-container
        image: mariadb
        ports:
        - containerPort: 3306
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: db-volume
      volumes:
        - name: db-volume
          persistentVolumeClaim:
            claimName: db-pvc

# wp pod içinde serverName değişecek.
