wp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wp-deployment
  labels:
    app: wp-app
    type: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wp-app
      type: client
  template:
    metadata:
      name: wp-pod
      labels:
        app: wp-app
        type: client
    spec:
      containers:
      - name: wp-container
        image: wordpress
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /etc/apache2/sites-available/000-default.conf
          subPath: 000-default.conf
          name: wp-config-volume
      volumes:
      - name: wp-config-volume
        configMap:
          name: wp-config
          items:
          - key: k8s.conf
            path: 000-default.conf

            #init container sed command
            #dockerfile custom image
            #configmap ile override etmek
