mysql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
  labels:
    app: wp-app
    type: db
spec:
  type: ClusterIP
  selector:
    app: wp-app
    type: db
  ports:
  - protocol: TCP
    port: 2021
    targetPort: 3306
