wp-np-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wp-np-svc
  labels:
    app: wp-app
    type: client
spec:
  type: NodePort
  selector:
    app: wp-app
    type: client
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
    nodePort: 30008
