ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wp-ingress
spec:
  rules:
  - host: k8s.example.com
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: wp-svc
            port:
              number: 8888
